# DataTransformer

./: .gitignore  README.md  encoderder.py  iris.csv  main.py  ml.csv  pyproject.toml  test.json  train.txt
utils/: progress.py
